# lapacke-static

./: Cargo.toml  README.md  build.rs
